# MuGit

./: .gitignore  Cargo.toml
.github/: dependabot.yml
src/: data.rs  main.rs
src/utils/: base.rs  mod.rs
