[package]
name = "mu_git"
version = "0.1.0"
authors = ["Bruno A. Muciño <mucinoab@gmail.com>"]
edition = "2018"

[dependencies]
sha1 = { version = "0.6.0", features = ["std"] }
walkdir = "2.3.1"
textwrap = "0.13.2"
chrono = "0.4.19"
hashbrown = { version = "0.9.1", features = ["nightly"] }
owo-colors = "1.2.1"

[profile.release]
lto = "fat"
codegen-units = 1
