[package]
name = "mu_git"
version = "0.1.0"
authors = ["Bruno A. Muciño <mucinoab@gmail.com>"]
edition = "2018"

[dependencies]
sha1 = { version = "0.10.1", features = ["std"] }
walkdir = "2.3.2"
textwrap = "0.15.0"
chrono = "0.4.22"
hashbrown = { version = "0.12.3", features = ["nightly"] }
owo-colors = "3.5.0"

[profile.release]
lto = "fat"
codegen-units = 1
